--- a/two/report/Assignment2_Group4.tex
+++ b/two/report/Assignment2_Group4.tex
@@ -161,7 +161,9 @@ The implementation consists of the following files:
 \subsection*{Sarsa}
 \subsection*{$\epsilon$-greedy vs. softmax}
 % Explain that smaller grid takes longer to converge, since the predator is more likely to catch the prey, so it takes more rounds to actually explore enough. On the other hand, in a bigger grid the predator is highly unlikely to catch the prey, so it would explore a lot even in one round by the time it catches the prey.
-
+\subsection*{Effect of discount rates on learning}
+\subsubsection*{Q-learning}
+\includegraphics[scale=0.25]{discount_rates_qlearning}
 \section*{Conclusion}
 
 \section*{Files attached}
